--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.hkimjp</groupId>
   <artifactId>todo</artifactId>
-<version>0.2.0-SNAPSHOT</version>
+<version>0.2.0</version>
   <name>hkimjp/todo</name>
   <description>FIXME: my new application.</description>
   <url>https://github.com/hkimjp/todo</url>
@@ -22,13 +22,13 @@
     <url>https://github.com/hkimjp/todo</url>
     <connection>scm:git:git://github.com/hkimjp/todo.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/hkimjp/todo.git</developerConnection>
-<tag>v0.2.0-SNAPSHOT</tag>
+<tag>v0.2.0</tag>
   </scm>
   <dependencies>
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-<version>0.2.0-SNAPSHOT</version>
+<version>0.2.0</version>
     </dependency>
   </dependencies>
   <build>
